Update 1.17 handling